cmake_minimum_required(VERSION 3.9)
project(NetworkingBoost VERSION 0.1 LANGUAGES CXX)
add_definitions(-std=c++2a)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREAD ON)
find_package(Boost REQUIRED COMPONENTS system thread regex)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
endif(Boost_FOUND)
set(BOOST_LIBRARIES_USED ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(sources1 client_main.cpp)
add_executable(client ${sources1})
target_link_libraries(client ${BOOST_LIBRARIES_USED})
set(sources2 server_main.cpp)
add_executable(server ${sources2})
target_link_libraries(server ${BOOST_LIBRARIES_USED})
set(sources3 active_client_socket.cpp)
add_executable(client_socket ${sources3})
target_link_libraries(client_socket ${BOOST_LIBRARIES_USED})
set(sources4 acceptor_socket.cpp)
add_executable(acceptor_socket ${sources4})
target_link_libraries(acceptor_socket ${BOOST_LIBRARIES_USED})
set(sources5 dns_name_resolution.cpp)
add_executable(dns_name_resolution ${sources5})
target_link_libraries(dns_name_resolution ${BOOST_LIBRARIES_USED})